@@ -15,6 +15,7 @@ Deprecated and removed features, and other changes affecting compatibility:
 
 The following bugs are resolved with this release:
 
+  [25812] Libio vtable protection is sometimes only partially enforced
   [28838] FAIL: elf/tst-p_align3
   [28850] linux: __get_nprocs_sched reads uninitialized memory from the stack
   [28853] libc: tst-spawn6 changes current foreground process group
